--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,20 @@ body {
 
     nav ul a:hover::after{
         width: 100%;
-    }
+    }    
 
+     /* menu mobile */
+     nav .menu-icon{
+        cursor: pointer;
+        font-size: 25px;
+        color: white;
+        display: none;
+     }
+     nav .close-icon{
+        display: none;
+        font-size: 30px;
+        color: white;
+     }
     .baner {
         display: flex;
         justify-content: center;
@@ -122,4 +134,167 @@ body {
     }
 
     /* Section Faça Mais */ 
+
+    .faça-mais .container {
+        display: flex;
+        align-items: center;
+    }
+
+    .faça-mais .faça-mais-text{
+        width: 50%;
+        padding: 0 40px;
+    }
+
+    .faça-mais .faça-mais-text h3 {
+        font-size: 56px;
+    }
+
+    .faça-mais .faça-mais-text p {
+        margin: 5px 0 10px 0;
+    }
+
+    .faça-mais .faça-mais-img { 
+        width: 50%;
+    }
+
+    .faça-mais .faça-mais-img img {
+        width: 100%;
+    }
+
+    .depoimentos h3 {
+        text-align: center;
+    }
+
+    .depoimentos p {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .cards {
+        display: flex;
+        justify-content: center;
+    }
+
+    .depoimentos .card-item {
+        background-color: #d3e6fd;
+        margin: 15px;
+        border-radius: 14px;
+        text-align: center;
+        width: 350px;
+        transition: 0.3s;
+    }
+
+    .depoimentos .card-item img {
+        border-radius: 30%;
+        width: 80px;
+        display: block;
+        margin: 10px auto;
+    }
+
+    .depoimentos .card-item .name-user {
+        font-weight: 600px;
+        font-size: 20px;
+        margin-bottom: 15px;
+        transition: 0.3s;
+    }
+
+    .depoimentos .card-item .depoimento-user {
+        font-size: 15px;
+        padding: 0 15px;
+        transition: 0.3s;        
+    }
+
+    .depoimentos .card-item .estrelas {
+        margin: 15px 0;
+        border-top: 2px solid #71767a23;
+        transition: 0.3s;
+    }
+
+    .depoimentos .card-item .estrelas i {
+        color: #4f9cf9;
+        margin: 15px;
+        font-size: 20px;
+    }
+
+        .depoimentos .card-item:hover{  
+            background-color: #4f9cf9;
+            margin-top: -5px;
+        }
+
+        .depoimentos .card-item:hover .name-user,
+        .depoimentos .card-item:hover .depoimento-user,
+        .depoimentos .card-item:hover .estrelas i{
+            color: white;
+        }
+
+        /* clientes */
+
+        .clientes h3,
+        .clientes p {
+            text-align: center;
+        }
+
+        .clientes .container div {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+
+        }
+
+        /* footer */
+        .footer{
+            background-color: #4f9cf9;
+            text-align: center;
+        }
+        .footer i {
+            color: #4f9cf9;
+            font-size: 19px;
+            background-color: white;
+            padding: 10px;
+            margin: 3px;
+            border-radius: 10px;
+            cursor: pointer;
+            margin-top: -5px;
+        }
+        
+        .footer p {
+            margin: 10px;
+            color: white;
+        }
+             /* Menu Mobile */
+
+        @media(max-width: 830px){
+            .ul{
+                position: fixed;
+                top: 0;
+                left: 0;
+                background: red;
+                width: 100%;
+                height: 100%;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+            .ul a {
+                margin: 10px 0;
+                font-size: 16px;
+            }
+            nav .menu-icon{
+                display: block;
+            }
+            nav .close-icon{
+                display: block;
+            }
+        }
+
+    
+
+
+
+
+
+
+
+
+
+
 
