--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,13 @@ body {
         color: white;
         display: none;
      }
+
      nav .close-icon{
         display: none;
         font-size: 30px;
         color: white;
-     }
+     }     
+     /* end menu mobile */
     .baner {
         display: flex;
         justify-content: center;
@@ -262,17 +264,22 @@ body {
         }
              /* Menu Mobile */
 
-        @media(max-width: 830px){
+        @media(max-width: 830px) {
             .ul{
                 position: fixed;
                 top: 0;
                 left: 0;
-                background: red;
+                background: #184b88;
                 width: 100%;
                 height: 100%;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                clip-path: circle( 0% at 100% 0%); 
+            }
+            
+            .ul.open{
+                clip-path: circle(139.9% at 100% 1%);
             }
             .ul a {
                 margin: 10px 0;
@@ -283,7 +290,10 @@ body {
             }
             nav .close-icon{
                 display: block;
-            }
+                position: absolute;
+                top: 46px;
+                right: 28px;                
+            } 
         }
 
     
