--- a/css/style.css
+++ b/css/style.css
@@ -1,310 +1,366 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    font-family: 'Inter', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+  font-family: "Inter", sans-serif;
 }
 
-
 body {
-    background-color: #f1f6fc31
-    } 
+  background-color: #f1f6fc31;
+}
 
-    section,footer {
-    padding: 54px 0;
+section,
+footer {
+  padding: 54px 0;
+}
 
-    }
+h3 {
+  font-size: 50px;
+}
 
-    h3 {
-        font-size: 50px;
-    }
+p {
+  color: #0000009c;
+}
 
-    p {
-        color: #0000009c;
-    }
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 5%;
+}
 
-    .container {
-        max-width: 1400px;
-        margin:0 auto;
-        padding: 0 5%;
-    }
+.btn {
+  background-color: #4f9cf9;
+  color: white;
+  padding: 15px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: inline-block;
+  transition: 0.1s;
+}
+.btn:hover {
+  animation: animete-outline 1s ease-out infinite;
+}
 
-    .btn {
-        background-color: #4f9cf9;
-        color: white;
-        padding: 15px 20px;
-        border-radius: 10px;
-        cursor: pointer;
-        display: inline-block;
-        transition: 0.1s;
-    }
-    .btn:hover{
-        animation: animete-outline 1s ease-out infinite;
-    }
+.btn:hover {
+  background-color: #3580db;
+}
 
-    .btn:hover {
-        background-color: #3580db;
-    }
+@keyframes animete-outline {
+  from {
+    outline: 0px solid #4f9bf98a;
+  }
+  to {
+    outline: 15px solid #4f9bf900;
+  }
+}
 
-    @keyframes animete-outline{
-        from{
-            outline: 0px solid #4f9bf98a;
-        }
-        to{
-            outline: 15px solid #4f9bf900;
-        }
-    }
+header {
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
-    header {
-        background-position: center;
-        background-size: cover;
-        background-attachment: fixed;
-    }
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 30px;
+}
 
-    nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-top: 30px;
-    }
+nav ul {
+  display: flex;
+  align-items: center;
+}
 
-    nav ul {
-        display: flex;
-        align-items: center;
-    }
+nav ul a {
+  color: white;
+  margin: 0 25px;
+  text-transform: uppercase;
+  font-size: 14px;
+  display: block;
+}
 
-    nav ul a {
-        color: white;
-        margin: 0 25px;
-        text-transform: uppercase;
-        font-size: 14px;
-        display: block;
-    }
+nav ul a:not(.btn)::after {
+  content: "";
+  background-color: #4f9cf9;
+  height: 3px;
+  width: 0%;
+  display: block;
+  margin: 0 auto;
+  transition: 0.3s;
+}
 
-    nav ul a:not(.btn)::after{
-        content: "";
-        background-color: #4f9cf9;
-        height: 3px;
-        width: 0%;
-        display: block;
-        margin: 0 auto;
-        transition: 0.3s;
-    }
+nav ul a:hover::after {
+  width: 100%;
+}
 
-    nav ul a:hover::after{
-        width: 100%;
-    }    
+/* menu mobile */
+nav .menu-icon {
+  cursor: pointer;
+  font-size: 25px;
+  color: white;
+  display: none;
+}
 
-     /* menu mobile */
-     nav .menu-icon{
-        cursor: pointer;
-        font-size: 25px;
-        color: white;
-        display: none;
-     }
+nav .close-icon {
+  display: none;
+  font-size: 30px;
+  color: white;
+}
 
-     nav .close-icon{
-        display: none;
-        font-size: 30px;
-        color: white;
-     }     
-     /* end menu mobile */
-    .baner {
-        display: flex;
-        justify-content: center;
-    }
+/* end menu mobile */
+.baner {
+  display: flex;
+  justify-content: center;
+}
 
-    .baner .baner-text {
-        margin: 150px;
-        text-align: center;
-        padding: 0 90px;
-    }
+.baner .baner-text {
+  margin: 150px;
+  text-align: center;
+  padding: 0 90px;
+}
 
-    .baner .baner-text h1 {
-        font-size: 96px;
-        color: white;
-    }
+.baner .baner-text h1 {
+  font-size: 96px;
+  color: white;
+}
 
-    .baner .baner-text p {
-        font-size: 20px;
-        color: #ffffffb7;
-        font-weight: lighter;
-        margin: 18px 0;
-    }
+.baner .baner-text p {
+  font-size: 20px;
+  color: #ffffffb7;
+  font-weight: lighter;
+  margin: 18px 0;
+}
 
-    /* Section Faça Mais */ 
+/* Section Faça Mais */
 
-    .faça-mais .container {
-        display: flex;
-        align-items: center;
-    }
+.faça-mais .container {
+  display: flex;
+  align-items: center;
+}
 
-    .faça-mais .faça-mais-text{
-        width: 50%;
-        padding: 0 40px;
-    }
+.faça-mais .faça-mais-text {
+  width: 50%;
+  padding: 0 40px;
+}
 
-    .faça-mais .faça-mais-text h3 {
-        font-size: 56px;
-    }
+.faça-mais .faça-mais-text h3 {
+  font-size: 56px;
+}
 
-    .faça-mais .faça-mais-text p {
-        margin: 5px 0 10px 0;
-    }
+.faça-mais .faça-mais-text p {
+  margin: 5px 0 10px 0;
+}
 
-    .faça-mais .faça-mais-img { 
-        width: 50%;
-    }
+.faça-mais .faça-mais-img {
+  width: 50%;
+}
 
-    .faça-mais .faça-mais-img img {
-        width: 100%;
-    }
+.faça-mais .faça-mais-img img {
+  width: 100%;
+}
 
-    .depoimentos h3 {
-        text-align: center;
-    }
+.depoimentos h3 {
+  text-align: center;
+}
 
-    .depoimentos p {
-        margin-bottom: 20px;
-        text-align: center;
-    }
-    .cards {
-        display: flex;
-        justify-content: center;
-    }
+.depoimentos p {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.cards {
+  display: flex;
+  justify-content: center;
+}
 
-    .depoimentos .card-item {
-        background-color: #d3e6fd;
-        margin: 15px;
-        border-radius: 14px;
-        text-align: center;
-        width: 350px;
-        transition: 0.3s;
-    }
+.depoimentos .card-item {
+  background-color: #d3e6fd;
+  margin: 15px;
+  border-radius: 14px;
+  text-align: center;
+  width: 350px;
+  transition: 0.3s;
+}
 
-    .depoimentos .card-item img {
-        border-radius: 30%;
-        width: 80px;
-        display: block;
-        margin: 10px auto;
-    }
+.depoimentos .card-item img {
+  border-radius: 30%;
+  width: 80px;
+  display: block;
+  margin: 10px auto;
+}
 
-    .depoimentos .card-item .name-user {
-        font-weight: 600px;
-        font-size: 20px;
-        margin-bottom: 15px;
-        transition: 0.3s;
-    }
+.depoimentos .card-item .name-user {
+  font-weight: 600px;
+  font-size: 20px;
+  margin-bottom: 15px;
+  transition: 0.3s;
+}
 
-    .depoimentos .card-item .depoimento-user {
-        font-size: 15px;
-        padding: 0 15px;
-        transition: 0.3s;        
-    }
+.depoimentos .card-item .depoimento-user {
+  font-size: 15px;
+  padding: 0 15px;
+  transition: 0.3s;
+}
 
-    .depoimentos .card-item .estrelas {
-        margin: 15px 0;
-        border-top: 2px solid #71767a23;
-        transition: 0.3s;
-    }
+.depoimentos .card-item .estrelas {
+  margin: 15px 0;
+  border-top: 2px solid #71767a23;
+  transition: 0.3s;
+}
 
-    .depoimentos .card-item .estrelas i {
-        color: #4f9cf9;
-        margin: 15px;
-        font-size: 20px;
-    }
+.depoimentos .card-item .estrelas i {
+  color: #4f9cf9;
+  margin: 15px;
+  font-size: 20px;
+}
 
-        .depoimentos .card-item:hover{  
-            background-color: #4f9cf9;
-            margin-top: -5px;
-        }
+.depoimentos .card-item:hover {
+  background-color: #4f9cf9;
+  margin-top: -5px;
+}
 
-        .depoimentos .card-item:hover .name-user,
-        .depoimentos .card-item:hover .depoimento-user,
-        .depoimentos .card-item:hover .estrelas i{
-            color: white;
-        }
+.depoimentos .card-item:hover .name-user,
+.depoimentos .card-item:hover .depoimento-user,
+.depoimentos .card-item:hover .estrelas i {
+  color: white;
+}
 
-        /* clientes */
+/* clientes */
 
-        .clientes h3,
-        .clientes p {
-            text-align: center;
-        }
+.clientes h3,
+.clientes p {
+  text-align: center;
+}
 
-        .clientes .container div {
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
+.clientes .container div {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
-        }
+/* footer */
+.footer {
+  background-color: #4f9cf9;
+  text-align: center;
+}
+.footer i {
+  color: #4f9cf9;
+  font-size: 19px;
+  background-color: white;
+  padding: 10px;
+  margin: 3px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: -5px;
+}
 
-        /* footer */
-        .footer{
-            background-color: #4f9cf9;
-            text-align: center;
-        }
-        .footer i {
-            color: #4f9cf9;
-            font-size: 19px;
-            background-color: white;
-            padding: 10px;
-            margin: 3px;
-            border-radius: 10px;
-            cursor: pointer;
-            margin-top: -5px;
-        }
-        
-        .footer p {
-            margin: 10px;
-            color: white;
-        }
-             /* Menu Mobile */
+.footer p {
+  margin: 10px;
+  color: white;
+}
+/* Página Sobre */
+.sobre .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-        @media(max-width: 830px) {
-            .ul{
-                position: fixed;
-                top: 0;
-                left: 0;
-                background: #184b88;
-                width: 100%;
-                height: 100%;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                clip-path: circle( 0% at 100% 0%); 
-            }
-            
-            .ul.open{
-                clip-path: circle(139.9% at 100% 1%);
-            }
-            .ul a {
-                margin: 10px 0;
-                font-size: 16px;
-            }
-            nav .menu-icon{
-                display: block;
-            }
-            nav .close-icon{
-                display: block;
-                position: absolute;
-                top: 46px;
-                right: 28px;                
-            } 
-        }
+.sobre .sobre-text {
+  width: 50%;
+  padding-right: 40px;
+}
 
-    
+.sobre .sobre-text p {
+  margin: 18px 0;
+  color: #000000a6;
+}
 
+.sobre .sobre-img {
+  width: 50%;
+}
 
+.sobre .sobre-img img {
+  width: 100%;
+  border-radius: 10px;
+}
+/* End Página Sobre */
+/* Página Serviços */
+.serviços h3{
+  text-align: center;
+}
 
+.serviços .container > p {
+  text-align: center;
+}
+.serviços .rows-cards {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+.serviços .row-card-item {
+  background-color: #d3e6fd;
+  width: 350px;
+  padding: 20px;
+  border-radius: 14px;
+  margin: 20px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.serviços .row-card-item:hover{
+  background-color: #4f9cf9;
+}
+.serviços .row-card-item:hover p{
+  color: white;
+}
+.serviços .row-card-item img{
+  background-color: #4f9cf9;
+  border-radius: 14px;
+  width: 70px;
+  padding: 9px;
+}
+.serviços .row-card-item p.nome-serviços {
+  margin: 5px 0;
+  transition: 0.3s;
+}
+.serviços .row-card-item p.descrição-serviço {
+  transition: 0.3s;
+}
 
+/* End Página Serviços */
+/* Menu Mobile */
+@media (max-width: 830px) {
+  .ul {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #184b88;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    clip-path: circle(0% at 100% 0%);
+    transition: 0.7s;
+  }
+  .ul.open {
+    clip-path: circle(141.4% at 100% 0);
+  }
 
-
-
-
-
-
-
+  .ul a {
+    margin: 10px 0;
+    font-size: 16px;
+  }
+  nav .menu-icon {
+    display: block;
+  }
+  nav .close-icon {
+    display: block;
+    position: absolute;
+    top: 46px;
+    right: 28px;
+  }
+}
